<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textDailyLayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/activtiy_daily_add"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDailyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDailyLayoutTitle"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/activtiy_name_day"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDailyLayoutTitle" />

    <EditText
        android:id="@+id/editDailyContent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/editDailyTitle"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/activity_daily"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDailyTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:src="@drawable/ic_done_black_24dp"
        android:text="@string/activity_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDailyContent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDailyContent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_weight="1"
        android:text="@string/activity_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDailyContent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>